--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ test_jupyter:
   ports:
     - 8888:8888
   volumes:
-    - $PWD:/home/jovyan/work
+    - $PWD/notebooks:/home/jovyan/work
   environment:
     - JUPYTER_ENABLE_LAB=yes
     - NB_UID=$UID #$(id -u)
