--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ jupyter:
   tty: True
   ports:
     - 8888:8888
-  volumes:
-    - ./notebooks:/home/jovyan/work
+#   volumes:
+#     - ./notebooks:/home/jovyan/work
   environment:
     - JUPYTER_ENABLE_LAB=yes
     - NB_UID=$UID #$(id -u)
